--- a/test/index.html
+++ b/test/index.html
@@ -1,1 +1,89 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap 5 Website Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+  <style>
+  .fakeimg {
+    height: 200px;
+    background: #aaa;
+  }
+  </style>
+</head>
+<body>
+
+<div class="p-1 bg-primary text-white text-left" title="PWA_WW" style="cursor:pointer" onclick="alert('ข้อความ')"> 
+
+  <h2 style="margin-left :15px ;">ระบบปรับปรุงชั้นข้อมูล PWA_WATERWORK เพื่อเชื่อมโยงกับระบบ OIS 
+</h2>
+
+</div>
+<!--
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <div class="container-fluid">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link active" href="#">Active</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+-->
+
+<div class="container mt-5">
+  <div class="row" >
+    <div class="col-sm-6">
+      <img src ="img1.jpg" class="img-fluid" />
+    </div>
+    <div class="col-sm-6">
+        <h5><img src ="img2.jpg" style="width:50px;height:50px" />กรอกรหัสพนักงานและรหัสผ่านเพื่อเข้าสู่ระบบ</h5>
+        <div class="">
+            <div class="mb-3 row">
+                <label for="inputUser" class="col-sm-3 col-form-label">รหัสพนักงาน</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" id="inputUser">
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <label for="inputPassword" class="col-sm-3 col-form-label">รหัสผ่าน</label>
+                <div class="col-sm-9">
+                  <input type="password" class="form-control" id="inputPassword">
+                </div>
+            </div>
+            <button type="button" class="btn btn-primary" >Login</button>
+        </div>    
+
+    </div>
+  </div>
+</div>
+
+<div class="mt-5 p-4  bg-dark text-white text-right">
+    <div class="col-6">
+
+    </div>
+    <div class="col-6">
+        <div  style=" display: block;">กองเทคโนโลยีสารสนเทศระบบประปา 
+        </div>
+          <div   style="display: block;">สำนักปฏิบัติการเทคโนโลยีดิจิทัล
+        </div>
+          <div  style="display: block;">โทร 02-5518752 
+        </div>
+    </div>
+  
+</div>
+
+</body>
+</html>
 
