--- a/test/index.html
+++ b/test/index.html
@@ -45,10 +45,10 @@
 <div class="container mt-5">
   <div class="row" >
     <div class="col-sm-6">
-      <img src ="img1.jpg" class="img-fluid" />
+      <img src ="https://poyatittaya.github.io/test/img1.jpg" class="img-fluid" />
     </div>
     <div class="col-sm-6">
-        <h5><img src ="img2.jpg" style="width:50px;height:50px" />กรอกรหัสพนักงานและรหัสผ่านเพื่อเข้าสู่ระบบ</h5>
+        <h5><img src ="https://poyatittaya.github.io/test/img2.jpg" style="width:50px;height:50px" />กรอกรหัสพนักงานและรหัสผ่านเพื่อเข้าสู่ระบบ</h5>
         <div class="">
             <div class="mb-3 row">
                 <label for="inputUser" class="col-sm-3 col-form-label">รหัสพนักงาน</label>
